--- a/templates/baseLayout.html
+++ b/templates/baseLayout.html
@@ -10,19 +10,11 @@
     <meta http-equiv="expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
     <meta http-equiv="pragma" content="no-cache" />
     <title>attendance sheet of colla</title>
-</head>
+</head> 
 <body>
-
-    <form class = attendanceForm>
-        <label for="grade"> grade </label>
-        <select name = "grade" >
-            <option> fuck you </option>
-        </select>
-        <input type="submit">
-    </form>
-
-
-
+    {% block someFcn %}
+    {% endblock %}
+    
 </body>
 
 </html>
