--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,4 +5,5 @@
     <p><a href="/accounts/login"> login </a></p>
     <p><a href="/accounts/logout">logout</a></p>
     <p><a href="/collaAdmin/userAttendance"> attendance Sheet </a></p>
+    <p><a href="collaAdmin/sign">sign</a></p>
 {% endblock %}
